--- a/static/css/index.css
+++ b/static/css/index.css
@@ -110,7 +110,7 @@ body {
 .publication-body img {
 }
 
-.results-carousel {
+/* .results-carousel {
   overflow: hidden;
 }
 
@@ -125,7 +125,7 @@ body {
 
 .results-carousel video {
   margin: 0;
-}
+} */
 
 
 .interpolation-panel {
@@ -175,10 +175,16 @@ body {
   transition: transform 0.5s ease;
 }
 
-.carousel-item {
-  min-width: 100%;
+.carousel .item {
+  /* min-width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: cover; */
+  margin: 5px;
+  overflow: hidden;
+  border: 1px solid #bbb;
+  border-radius: 10px;
+  padding: 0;
+  font-size: 0;
 }
 
 .carousel-nav {
@@ -209,7 +215,7 @@ body {
 }
 
 
-/* 容器 */
+/* video */
 .video-container {
   display: flex;
   justify-content: center;
@@ -227,6 +233,8 @@ body {
   height: auto;
   display: none; /* 初始隐藏所有视频 */
   max-width: auto; /* 视频最大宽度为网页宽度 */
+  border: 1px solid #bbb;
+  border-radius: 10px;
 }
 
 .active {
